# f1-player

./: .gitignore  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  ci_test.yml  publish-wiki.yml  wiki.yml
ai/: patterns.md
src/f1p/: __init__.py  app.py  main.py
src/f1p/services/data_extractor/: __init__.py  enums.py  service.py  track_statuses.py
src/f1p/services/data_extractor/parsers/: laps.py  position.py  session.py  telemetry.py  track.py  weather.py
src/f1p/services/procedural3d/: __init__.py  base.py  cone.py  sphere.py
src/f1p/ui/: enums.py
src/f1p/ui/components/: driver.py  leaderboard.py  map.py  menu.py  origin.py  playback.py  weather.py
src/f1p/ui/components/camera/: component.py  controlers.py  enums.py  types.py
src/f1p/ui/components/driver/: component.py  window.py
src/f1p/ui/components/gui/: button.py  drop_down.py
src/f1p/ui/components/leaderboard/: __init__.py  component.py  processors.py
src/f1p/ui/components/leaderboard/processors/: __init__.py
src/f1p/ui/components/track_status/: __init__.py
src/f1p/utils/: color.py  dataframe.py  geometry.py  performance.py  timedelta.py
src/procedural3d/: box.py  cylinder.py  torus.py
tests/: test_data_extractor.py  test_first_test.py
tests/f1p/services/data_extractor/enums/: test_conventional_session_identifiers.py
tests/f1p/ui/: conftest.py
tests/f1p/ui/components/: test_driver.py  test_map.py
tests/f1p/ui/components/camera/: conftest.py  test_component.py
tests/unit/f1p/: conftest.py  test_app.py  test_main.py
tests/unit/f1p/services/data_extractor/: conftest.py  test_service.py  test_track_statuses.py
tests/unit/f1p/ui/: conftest.py
tests/unit/f1p/ui/components/: test_driver.py  test_map.py
tests/unit/f1p/utils/: test_color.py  test_dataframe.py  test_geometry.py  test_timedelta.py
utils/: performance.py
wiki/: Contributing.md  Driver-Window.md  Features.md  Home.md  Installation.md  Using-AI.md  _Sidebar.md
wiki/features/: Driver-Window.md
(+15 files in other folders)
