[tool.poetry]
name = "F1 Player"
version = "0.0.4"
description = "A tool for watching F1 races from a data perspective."
authors = [
    "Mitko Toshev <mr.sir88@gmail.com>"
]
readme = "README.md"
packages = [{include = "f1p", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
fastf1 = "^3.7.0"
panda3d = "^1.10.15"
pandas-stubs = "^2.3.3.251219"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
pytest = "8.4.1"
coverage = "^7.13.1"
pytest-mock = "3.14.1"
pytest-cov = "6.2.1"
pytest-asyncio = "1.1.0"
mypy = "1.17.0"
black = "23.12.1"
isort = "5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
f1p = "f1p.main:app"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]
preview = true
exclude = [
    "src/f1p/services/procedural3d"
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "ARG", "A", "COM", "C4", "PIE", "T20", "PT"]
ignore = ["PT001"]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src", "tests"]
